# llm-zoomcamp-glen

./: README.md  pyproject.toml
intro/: homework-intro.ipynb
search_evaluation/: search_evaluation.ipynb
vector_search/: homework_02.ipynb
workshops/: homework_dlt.ipynb
workshops/db.qdrant/collection/zoomcamp_tagged_data__dlt_loads/: storage.sqlite
workshops/db.qdrant/collection/zoomcamp_tagged_data__dlt_pipeline_state/: storage.sqlite
workshops/db.qdrant/collection/zoomcamp_tagged_data__dlt_version/: storage.sqlite
workshops/db.qdrant/collection/zoomcamp_tagged_data_zoomcamp_data/: storage.sqlite
