[tool.poetry]
name = "llm-zoomcamp-glen"
version = "0.1.0"
package-mode = false

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai = "^1.83.0"
notebook = "^7.4.3"
elasticsearch = "8.4.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
ipywidgets = "^8.1.7"
ipykernel = "^6.29.5"
requests = "^2.32.4"
tqdm = "^4.67.1"
tiktoken = "^0.9.0"
python-dotenv = "^1.1.0"
ollama = "^0.5.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
