[tool.poetry]
name = "llm-zoomcamp-glen"
version = "0.1.0"
package-mode = false

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai = "^1.83.0"
notebook = "^7.4.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
ipywidgets = "^8.1.7"
ipykernel = "^6.29.5"
requests = "^2.32.4"
tqdm = "^4.67.1"
tiktoken = "^0.9.0"
fastembed = "^0.7.1"
qdrant-client = "^1.14.3"
dlt = "^1.13.0"
transformers = "^4.53.2"
accelerate = "^1.9.0"
torch = "^2.7.1"
langchain = "^0.3.26"
langchain-community = "^0.3.27"
langchain-core = "^0.3.69"
langchain-aws = "^0.2.28"
boto3 = "^1.39.9"
minsearch = "^0.0.4"
sentence-transformers = "^5.0.0"
rouge = "^1.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
